--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -1,126 +1,107 @@
 # suppress inspection "UnusedProperty" for whole file
-after=After
-all_check_box_text=All
+about=About
+activity-dialog-title=
+address=Address
+after=More
+all_check_box_text=All (%d) enterprises
+ascending=Ascending
 back=Back
-before=Before
-branch=Branch
-branches=Branches
+before=Less
 brands=Brands
-businessentitytype=Форма собственности
+businessentitytype=
+cache_update_message=Wait...
 cancel=Cancel
-checkdate=Validation date
+checkdate=Verification
+close_window_message=Wait the programnn is closing now...
 contactperson=Contact person
 contain=Contain
+copy=Copy
 country=Country
-creationdate=Creation date
+creationdate=Year of creation
+current_row=Current row
+database_may_be_already_in_use=Database is already open
 default=Default
-delete_tag=Remove from selection
+delete_tag=Remove from Favorites
+descending=descending
 emails=Email
+empty=Empty
 equal=Equal
-rows_choose_panel_title=Export
+expired_uid=Registration code expired or number of installations exceed
 export=Export
 exported_i_from_size=Exported %d from %d
+false=No
 faxes=Fax
 fields=Fields
+filter_input_message_format=Show rows where "%s" is %s
+filter_text_format=Sort collumn [%s] %s
+filter_tree=Filter out...
 foreingcapital=Foreing capital
 forward=Forward
 goods=Goods
-home=Home
+help=Help
 i_agree=I agree
-internet=Internet
-language_choose_panel_title=Choose language
-mail=Mail
+idno=IDNO
+invalid_uid=Registration code is wrong
+JDBCConnectionException=Error connection with database
+language_choose_panel_title=Language
+mail=Send email
 moldova=Republic of Moldova
 next=Next
 not_contain=Not contain
+not_empty=Not emptz
 not_equal=Not equal
-null=N/A
-orderby=Order by
-phone=Phone
+null=n/a
 phones=Phones
 postalcode=Postal code
 prepared_i_from_size=Prepared %d from %d
 print-preview=Print preview
-print-settings=Print Settings
+print-settings=Print settings
 print=Print
-print_header=Printed by VaroDB
+print_header=Printed by RMDB
 print_prepare_progress=Print preparation
-printing_done=Printing done
-printing_warning=Printing may take some time
-region=Region
-register_by_internet=Register by internet
-register_by_phone=Register by phone
-registration_code=Registration code
-rename_tag=Rename selection
-rename_tag_message=Enter new name
-search=Search
-sector=Sector
-select_all=Select all
-selected_only_check_box_text=Only selected (%s) enterprises
-settings=Settings
-street=Street
-streethouseoffice=Address
-tag_add=Add tag
-tag=Selection
-title=Title
-titleContains=Title contains
-town=Town
-tree=Rubrics
-type-address=Address
-type-data=Enterprise data
-urls=WWW
-wait_for_export=Wait
-workplaces<=Workplaces less
-workplaces=Workplaces
-workplaces>=Workplaces greater
-ypurl=Link to YP.md
-filter_tree=Show rubrics start with...
-tag_placeholder=Enter word
-empty=Empty
-not_empty=Not empty
-show_text_in_button=Show text in button
-false=No
-true=Yes
-remove_filter=Remove filter
-address=Address
-wrong-data-format-message=Data myst by in format dd/mm/yy
-copy=Copy
-filter_input_message_format=Show records where "%s" %s
-row_sorter_dialog_message=Wait...
-activity-dialog-title=
-search-wait-dialog-message=Wait...
-total_rows=Total rows
-current_row=Current row
-filter_text_format=Sort column [%s] %s
-ascending=ascending
-descending=descending
-row_sorting_message=Sort...
-close_window_message=Close window message
-server_error=По техническим причинам вы не можете зарегистрироваться через интернет \
-  повторите попытку позже или попробуйте зарегистрироваться по телефону
-connection_error=Ошибка связи. Проверте сеть и попытайтесь еще раз или попробуйте зарегистрироваться по телефону
-by_phone=phone
-by_internet=internet
-registration=registration by:
-invalid_uid=Номер лицензии не верен.
-unregistered_program_error=Программа не зарегистрированна. Пройти регистрацию.
-validation_error=Ключ введен не верно. Повторите ввод еще раз или попробуйте зарегистрироваться по телефону
-decrypt_error=Регистрационный код не верен
-expired_uid=Истек срок лицензии или колличество устоновок превышено
-updated-message=%s updated %s enterprises
-term_expired=Истек срок лицензии
-update_progress_message=Идет обновление. Не закрывайте окно!
-updates_exists_message=Есть обновления. Установить?
-use_proxy_label=Use Proxy?
+printing_done=Done
+printing_warning=Wait...
 proxy_label=Proxy
-proxy_port_label=Port
 proxy_login_label=Login
 proxy_password_label=Password
-proxy_settings_title=Proxy-server settings
-interface_settings=Interface setting
-about=About
-help=Help
-idno=IDNO
-JDBCConnectionException=Cannot connect to database
-cache_update_message=Wait...
-database_may_be_already_in_use=database may be already in use
+proxy_port_label=Port
+proxy_settings_title=Proxy
+region=District/Municipium
+register_by_phone=Connect with us by phone 022-73-77-94 or inform@varo-inform.com and tell registration code
+registration_code=Registration code
+remove_filter=Remove filter
+rename_tag=Rename
+rename_tag_message=Enter new title
+root=All
+row_sorter_dialog_message=Search in progress...
+row_sorting_message=Sorting in progress...
+rows_choose_panel_title=Export
+search=Search
+sector=Region
+select_all=Select all
+selected_only_check_box_text=Only selected (%d) enterprises
+settings=Settings
+show_text_in_button=Show text in button
+streethouseoffice=Address
+tag=Favorites
+tag_add=Add to Favorites
+tag_placeholder=Enter title
+term_expired=Registration code is expired. Additional information: 022-73-77-94 or inform@varo-inform.com
+title=Title
+titleContains=Title contains
+total_rows=Total
+town=Locality
+tree=Classifier
+true=Yes
+type-address=Addresses for mailing
+type-data=Data
+unregistered_program_error=Application is not registered. Register?
+update_progress_message=Update in progress. Don't close the window!
+updated-message=%s updated %s enterprises
+updates_exists_message=Install update?
+urls=Website
+use_proxy_label=Use Proxy?
+wait_for_export=Wait...
+workplaces<=Workplaces less than
+workplaces=Workplaces
+workplaces>=Workplaces more than
