--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -1,34 +1,54 @@
 # suppress inspection "UnusedProperty" for whole file
+about=О программе
+activity-dialog-title=
+address=Адрес
 after=Больше
 all_check_box_text=Все (%d) предприятий
+ascending=по возрастанию
 back=Назад
 before=Меньше
 brands=Бренды
 businessentitytype=Форма собственности
+cache_update_message=Ждите...
 cancel=Завершить
 checkdate=Дата проверки
+close_window_message=Идет подготовка к закрытию программы...
 contactperson=Контактное лицо
 contain=Содержит
+copy=Копировать
 country=Страна
 creationdate=Дата создания
+current_row=Текущая строка
+database_may_be_already_in_use=База данных уже открыта
 default=По умолчанию
 delete_tag=Удалить из избранного
+descending=по убыванию
 emails=Email
+empty=Пустое
 equal=Равно
-rows_choose_panel_title=Экспортировать
+expired_uid=Истек срок лицензии или колличество устоновок превышено
 export=Экспорт
 exported_i_from_size=Экспотрировано %d из %d предприятий
+false=Нет
 faxes=Факс
 fields=Поля
+filter_input_message_format=Показать записи где поле "%s" %s
+filter_text_format=Сортировать столбец [%s] %s
+filter_tree=Показать рубрику, начинающуюся с...
 foreingcapital=Иностранный капитал
 forward=Вперед
 goods=Товары
+help=Помощь
 i_agree=Я согласен(нa)
+idno=IDNO
+invalid_uid=Номер лицензии введен не верно
+JDBCConnectionException=Ошибка соединения с базой данных
 language_choose_panel_title=Язык
 mail=Отправить email
 moldova=Республика Молдова
 next=Далее
 not_contain=Не содержит
+not_empty=Не пустое
 not_equal=Не равно
 null=н/д
 phones=Телефон
@@ -41,69 +61,47 @@ print_header=Распечатано RMDB
 print_prepare_progress=Подготовка к печати
 printing_done=Печать закончена
 printing_warning=Печать может заненять некоторое время
+proxy_label=Proxy
+proxy_login_label=Логин
+proxy_password_label=Пароль
+proxy_port_label=Port
+proxy_settings_title=Proxy
 region=Райнон/Муниципий
 register_by_phone=Свяжитесь с нами по телефону 022-73-77-94 или inform@varo-inform.com и сообщите код регистрации
 registration_code=Код регистарции
+remove_filter=Удалить фильтр
 rename_tag=Переименовать
 rename_tag_message=Введите новое название
+root=Все данные
+row_sorter_dialog_message=Идет поиск...
+row_sorting_message=Идет сортировка...
+rows_choose_panel_title=Экспортировать
 search=Поиск
 sector=Регион
 select_all=Выбрать все
 selected_only_check_box_text=Только выделенные (%d) предприятий
 settings=Настройки
-street=Улица
+show_text_in_button=Показвать текст в кнопках
 streethouseoffice=Адрес
-tag_add=Добавить в избранное
 tag=Избранное
+tag_add=Добавить в избранное
+tag_placeholder=Введите название
+term_expired=Истек срок лицензии. Дополнительная информация по тел. 022-73-77-94 или inform@varo-inform.com
 title=Название
 titleContains=Название содержит
+total_rows=Найдено
 town=Населенный пункт
 tree=Рубрики
+true=Да
 type-address=Печатать адресов для почтовой рассылки
 type-data=Печать данных предриятия
-urls=Сайт
-wait_for_export=Подождите идет экспорт
-workplaces<=Колличество рабочих менее
-workplaces=Колличество рабочих
-workplaces>=Колличество рабочих более
-filter_tree=Показать рубрику, начинающуюся с...
-tag_placeholder=Введите название
-empty=Пустое
-not_empty=Не пустое
-show_text_in_button=Показвать текст в кнопках
-false=Нет
-true=Да
-remove_filter=Удалить фильтр
-address=Адрес
-wrong-data-format-message=Дата должна быть в формате dd/mm/yy
-copy=Копировать
-filter_input_message_format=Показать записи где поле "%s" %s
-row_sorter_dialog_message=Идет поиск...
-activity-dialog-title=
-total_rows=Найдено
-current_row=Текущая строка
-filter_text_format=Сортировать столбец [%s] %s
-ascending=по возрастанию
-descending=по убыванию
-row_sorting_message=Идет сортировка...
-close_window_message=Идет подготовка к закрытию программы...
-invalid_uid=Номер лицензии не верен.
 unregistered_program_error=Программа не зарегистрированна. Пройти регистрацию.
-expired_uid=Истек срок лицензии или колличество устоновок превышено
-updated-message=%s обновлено %s предприятий
-term_expired=Истек срок лицензии
 update_progress_message=Идет обновление. Не закрывайте окно!
+updated-message=%s обновлено %s предприятий
 updates_exists_message=Есть обновления. Установить?
+urls=Сайт
 use_proxy_label=Использовать Proxy?
-proxy_label=Proxy
-proxy_port_label=Port
-proxy_login_label=Логин
-proxy_password_label=Пароль
-proxy_settings_title=Настройки Proxy-сервера
-about=О программе
-help=Помощь
-idno=Фискальный код
-JDBCConnectionException=Ошибка соединения с базой данных
-cache_update_message=Ждите...
-database_may_be_already_in_use=База данных уже открыта
-root=Все данные
+wait_for_export=Подождите, идет экспорт
+workplaces<=Работающих менее
+workplaces=Работающих
+workplaces>=Работающих более
