added menu item for re-indexing database

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -105,3 +105,4 @@ wait_for_export=Wait...
 workplaces<=Workplaces less than
 workplaces=Workplaces
 workplaces>=Workplaces more than
+reindexDB=Reindex
