--- a/external-resources/i18n/Strings_ro.properties
+++ b/external-resources/i18n/Strings_ro.properties
@@ -105,3 +105,4 @@ wait_for_export=Aşteptati, se efectuează exportul
 workplaces<=Numărul de angajaţi mai puţini
 workplaces=Numărul de angajaţi
 workplaces>=Numărul de angajaţi mai mulţi
+reindexDB=Reindexare
