--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -105,3 +105,4 @@ wait_for_export=Подождите, идет экспорт
 workplaces<=Работающих менее
 workplaces=Работающих
 workplaces>=Работающих более
+reindexDB=Переиндексировать
