--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -52,6 +52,7 @@ not_empty=Not emptz
 not_equal=Not equal
 null=n/a
 phones=Phones
+phone=Phone
 postalcode=Postal code
 prepared_i_from_size=Prepared %d from %d
 print-preview=Print preview
@@ -67,7 +68,7 @@ proxy_password_label=Password
 proxy_port_label=Port
 proxy_settings_title=Proxy
 region=District/Municipium
-register_by_phone=Connect with us by phone 022-73-77-94 or inform@varo-inform.com and tell registration code
+register_by_phone=Connect with us by phone 022-73-77-94 or inform@varo-inform.com and tell licence code: : <b>%s</b>
 registration_code=Registration code
 remove_filter=Remove filter
 rename_tag=Rename
@@ -82,6 +83,7 @@ select_all=Select all
 selected_only_check_box_text=Only selected (%d) enterprises
 settings=Settings
 show_text_in_button=Show text in button
+street=Street
 streethouseoffice=Address
 tag=Favorites
 tag_add=Add to Favorites
