--- a/external-resources/i18n/Strings_ro.properties
+++ b/external-resources/i18n/Strings_ro.properties
@@ -52,6 +52,7 @@ not_empty=Nu este gol
 not_equal=Nu este egal
 null=Nu sunt date
 phones=Telefon
+phone=Telefon
 postalcode=Cod poştal
 prepared_i_from_size=Pregătit %d din %d întreprinderi
 print-preview=Previzualizare
@@ -67,7 +68,7 @@ proxy_password_label=Parolă
 proxy_port_label=Port
 proxy_settings_title=Proxy
 region=Raion /Municipiu
-register_by_phone=Contactati-ne la numărul de telefon 022-73-77-94 sau inform@varo-inform.com şi informaţi codul de înregistrare
+register_by_phone=Contactati-ne la numărul de telefon 022-73-77-94 sau inform@varo-inform.com şi informaţi numărul licenţei: <b>%s</b>
 registration_code=Codul de înregistrare
 remove_filter=Scoate filtrul
 rename_tag=Redenumire
@@ -82,6 +83,7 @@ select_all=Selectaţi toate
 selected_only_check_box_text=Numai (%d) întreprinderi selectate
 settings=Setări
 show_text_in_button=Arată textul din butoane
+street=Stradă
 streethouseoffice=Adresă
 tag=Favorite
 tag_add=Adaugă în favorite
