--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -52,6 +52,7 @@ not_empty=Не пустое
 not_equal=Не равно
 null=н/д
 phones=Телефон
+phone=Телефон
 postalcode=Почтовый индекс
 prepared_i_from_size=Подготовленно %d из %d предприятий
 print-preview=Предпросмотр
@@ -67,7 +68,7 @@ proxy_password_label=Пароль
 proxy_port_label=Port
 proxy_settings_title=Proxy
 region=Райнон/Муниципий
-register_by_phone=Свяжитесь с нами по телефону 022-73-77-94 или inform@varo-inform.com и сообщите код регистрации
+register_by_phone=Свяжитесь с нами по телефону 022-73-77-94 или inform@varo-inform.com и сообщите номер лицензии: <b>%s</b>
 registration_code=Код регистарции
 remove_filter=Удалить фильтр
 rename_tag=Переименовать
@@ -82,6 +83,7 @@ select_all=Выбрать все
 selected_only_check_box_text=Только выделенные (%d) предприятий
 settings=Настройки
 show_text_in_button=Показвать текст в кнопках
+street=Улица
 streethouseoffice=Адрес
 tag=Избранное
 tag_add=Добавить в избранное
