added good type

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -8,7 +8,7 @@ ascending=Ascending
 back=Back
 before=Less
 brands=Brands
-businessentitytype=
+businessentitytype=Type of business entity
 cache_update_message=Wait...
 cancel=Cancel
 checkdate=Verification
@@ -108,3 +108,4 @@ workplaces<=Workplaces less than
 workplaces=Workplaces
 workplaces>=Workplaces more than
 reindexDB=Reindex
+goodtypes=Good types
