--- a/external-resources/i18n/Strings_ro.properties
+++ b/external-resources/i18n/Strings_ro.properties
@@ -108,3 +108,4 @@ workplaces<=Numărul de angajaţi mai puţini
 workplaces=Numărul de angajaţi
 workplaces>=Numărul de angajaţi mai mulţi
 reindexDB=Reindexare
+goodtypes=Good types
