--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -108,3 +108,4 @@ workplaces<=Работающих менее
 workplaces=Работающих
 workplaces>=Работающих более
 reindexDB=Переиндексировать
+goodtypes=Тип товара
