change enterprise proxy

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -84,7 +84,6 @@ selected_only_check_box_text=Only selected (%d) enterprises
 settings=Settings
 show_text_in_button=Show text in button
 street=Street
-streethouseoffice=Address
 tag=Favorites
 tag_add=Add to Favorites
 tag_placeholder=Enter title
@@ -109,3 +108,7 @@ workplaces=Workplaces
 workplaces>=Workplaces more than
 reindexDB=Reindex
 goodtypes=Good types
+gsm=Mobile phone
+personphones=Contact person's phones
+office=Office
+house=House
