--- a/external-resources/i18n/Strings_ro.properties
+++ b/external-resources/i18n/Strings_ro.properties
@@ -84,7 +84,6 @@ selected_only_check_box_text=Numai (%d) întreprinderi selectate
 settings=Setări
 show_text_in_button=Arată textul din butoane
 street=Stradă
-streethouseoffice=Adresă
 tag=Favorite
 tag_add=Adaugă în favorite
 tag_placeholder=Introduceţi denumirea
@@ -109,3 +108,7 @@ workplaces=Numărul de angajaţi
 workplaces>=Numărul de angajaţi mai mulţi
 reindexDB=Reindexare
 goodtypes=Good types
+gsm=Telefon mobil
+personphones=Telefon persoană de contact
+office=Birou
+house=Casa
