--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -84,7 +84,6 @@ selected_only_check_box_text=Только выделенные (%d) предпр
 settings=Настройки
 show_text_in_button=Показвать текст в кнопках
 street=Улица
-streethouseoffice=Адрес
 tag=Избранное
 tag_add=Добавить в избранное
 tag_placeholder=Введите название
@@ -109,3 +108,7 @@ workplaces=Работающих
 workplaces>=Работающих более
 reindexDB=Переиндексировать
 goodtypes=Тип товара
+gsm=Мобильный телефон
+personphones=Телефон контактного лица
+house=Дом
+office=Офис
