internet panel created

--- a/external-resources/i18n/Strings_ro.properties
+++ b/external-resources/i18n/Strings_ro.properties
@@ -112,3 +112,4 @@ gsm=Telefon mobil
 personphones=Telefon persoană de contact
 office=Birou
 house=Casa
+register_by_internet=Introduceti codul de înregistrare
