--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -112,3 +112,4 @@ gsm=Мобильный телефон
 personphones=Телефон контактного лица
 house=Дом
 office=Офис
+register_by_internet=Введите код регистрации
